projects/vb6parse/snapshots/tests/library/datetime/datepart/datepart_with_firstdayofweek.snap
---
source: projects/vb6parse/tests/library/datetime/datepart.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: weekday
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: DatePart
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: StringLiteralExpression
                      children:
                        - kind: StringLiteral
                          text: "\"w\""
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: DateKeyword
                          text: Date
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: vbMonday
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
